--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "",
   "license": "BSD",
   "dependencies": {
-    "crel": "~1.1.0",
-    "doc-js": "~0.3.1",
-    "interact-js": "~0.4.0",
-    "venfix": "0.0.1"
+    "crel": "1.1.x",
+    "doc-js": "0.4.x",
+    "interact-js": "0.4.x",
+    "venfix": "0.0.x"
   }
 }
