Added arbitrary widths

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "doc-js": "0.4.x",
     "interact-js": "^2.0.0",
     "venfix": "0.0.x",
-    "laidout": "^1.0.0"
+    "laidout": "^1.0.0",
+    "unitr": "^1.0.0"
   }
 }
