--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "flaps.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "browserify test.js > test.browser.js"
   },
   "author": "",
   "license": "BSD",
   "dependencies": {
-    "crel": "^1.1.0",
+    "crel": "^2.1.2",
     "doc-js": "^1.0.0",
     "interact-js": "^2.0.0",
     "laidout": "^1.0.0",
