updated to use schedule-frame

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "flaps.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "browserify test.js > test.browser.js"
+    "build": "browserify test.js > test.browser.js",
+    "watch": "watchify test.js -o test.browser.js"
   },
   "author": "",
   "license": "BSD",
@@ -15,6 +16,7 @@
     "interact-js": "^2.0.0",
     "laidout": "^1.0.0",
     "math-js": "^1.0.0",
+    "schedule-frame": "^1.0.0",
     "unitr": "^1.0.0",
     "venfix": "^1.0.0"
   }
